<resources>
    <string name="app_name">OnFishing</string>
    <string name="button_fishings">My fisings</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="nnew">New</string>
    <string name="place">Place</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="load_image">Load image</string>
    <string name="make_photo">Make photo</string>
    <string name="date_of_fishing">Date of fishing</string>
    <string name="time_of_fishing">Time of fishing</string>
    <string name="take_photo">Take photo</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_direction">Wind direction</string>
    <string name="custom_weather">Custom weather</string>
    <string name="weather_choose">Choose weather</string>
    <string name="get_weather">Get weather</string>
</resources>
